Corrected an error caused by calling the wrong stream method.